--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -122,9 +122,12 @@ ul {
   padding: 20px;
   height: auto;
   margin: 20px;
+
   /* background-color: yellow; */
   /* border: 1px solid rgb(2, 2, 2); */
 }
+
+
 
 .register-form-input {
   background-color: transparent;
@@ -138,10 +141,11 @@ ul {
   padding: 10px;
   border: 1px solid #e0e0e0;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 0px;
 }
 
 .input-items label {
+
   font-weight: bold;
   color: #d0cccc;
   line-height: 1.6x;
@@ -149,12 +153,14 @@ ul {
 }
 
 .input-items input[type="text"] {
+  margin-left: -10px;
   border: none;
   margin-top: 5px;
   width: 100%;
   height: 40px;
   font-size: 13pt;
   font-weight: bold;
+
 }
 
 .password {
@@ -170,6 +176,7 @@ ul {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+
 }
 
 .forgot-password ul li {
