--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -59,8 +59,15 @@ ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-left: 20px;
-  padding-bottom: 80px;
+  padding-bottom: 20px;
   grid-area: content-section;
+}
+
+.pagination-container {
+  display: grid;
+  grid-area: pagination-section;
+  padding-bottom: 20px;
+
 }
 
 .grid-container {
@@ -69,7 +76,8 @@ ul {
     "top-navbar "
     "carousel-section "
     "content-title "
-    "content-section ";
+    "content-section "
+    "pagination-section";
 }
 
 /* Top Navigation */
@@ -112,10 +120,10 @@ ul {
 
 .top-nav ul li input {
   background: #fff;
-  margin-left: 60px;
+
   padding: 0 20px;
   border: 1px solid #cacaca;
-  width: 350px;
+  width: 650px;
   height: 43px;
   border-radius: 35px;
 }
@@ -303,6 +311,7 @@ ul {
 
 /* media 1200px */
 @media screen and (max-width: 1200px) {
+
   /* content title */
   .content-title {
     margin-top: 10px;
@@ -341,10 +350,10 @@ ul {
     font-size: 13px;
   }
 
-  .top-nav .logo {
+  /* .top-nav .logo {
     display: none;
     width: 130px;
-  }
+  } */
 
   .top-nav ul {
     /* margin-left: 60px; */
@@ -450,7 +459,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 750px) {
   .top-nav ul {
     /* margin-left: 60px; */
     margin-left: 90px;
@@ -471,36 +480,28 @@ ul {
     border-radius: 35px;
     display: flex;
   }
-}
 
-@media screen and (max-width: 570px) {
-  .top-nav ul {
-    /* margin-left: 60px; */
-    margin-left: 80px;
-    /* flex-direction: column; */
-    flex-wrap: wrap;
-    align-items: center;
-    display: flex;
-  }
-
-  .top-nav ul li input {
-    display: flex;
-    width: 100px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .top-nav ul {
-    /* margin-left: 60px; */
-    margin-left: 80px;
-    /* flex-direction: column; */
-    flex-wrap: wrap;
-    align-items: center;
-    display: flex;
-  }
-
-  .top-nav ul li input {
+  .top-nav .logo {
     display: none;
+    width: 130px;
+  }
+
+}
+
+
+
+@media screen and (max-width:499px) {
+  .top-nav ul {
+    margin-left: 60px;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    align-items: center;
+    display: flex;
+  }
+
+  .top-nav ul li input {
+    display: flex;
+    width: 110px;
   }
 
   .carousel-text {
